refactor: Update app name and metadata
Update package.json, metadata.json, and App.tsx to reflect the new application name "CineGenesis: Juliette Psicose". This change clarifies the project's focus and scope.

The prompt for archetype analysis in geminiService.ts has been refined to provide more specific instructions to the AI model, guiding it to act as a Director of Photography and focus on detailed physical descriptions and atmosphere for generating 3D character assets.

Additionally, the image labels in App.tsx have been updated from "Personagem A" / "Personagem B" to "Protagonista (Ref)" / "Antagonista (Ref)" for better clarity within the context of character reference.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cinegenesis-ai",
+  "name": "cinegenesis:-juliette-psicose",
   "private": true,
   "version": "0.0.0",
   "type": "module",
